objects/CDN_CH_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>AUC_Number__c</fullName>
        <label>AUC Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conflicting_Agreements_of_Consultant__c</fullName>
        <description>Identify all conflicting or potentially conflicting agreements or obligations of Consultant and the nature of the conflict involved: (write NONE if not applicable)</description>
        <inlineHelpText>Identify all conflicting or potentially conflicting agreements or obligations of Consultant and the nature of the conflict involved: (write NONE if not applicable)</inlineHelpText>
        <label>Conflicting Agreements of Consultant</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Cost__c</fullName>
        <label>Consultant Cost</label>
        <summarizedField>CDN_CH_Consultant__c.Cost__c</summarizedField>
        <summaryForeignKey>CDN_CH_Consultant__c.Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Consulting_Fees_and_Payment_Terms__c</fullName>
        <label>Consulting Fees and Payment Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <picklist>
            <picklistValues>
                <fullName>40143</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41478</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41490</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41880</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41955</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration of this schedule in days</description>
        <formula>End_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration of this schedule in days</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duties_of_Consultant__c</fullName>
        <description>Duties and/or Deliverables of Consultant (Provide attachments as necessary)</description>
        <inlineHelpText>Duties and/or Deliverables of Consultant (Provide attachments as necessary)</inlineHelpText>
        <label>Duties of Consultant</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Echosign_Status__c</fullName>
        <label>Echosign Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Sign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out For Signatures</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_days_of_consulting_month__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Expected days of consulting to be performed per month</description>
        <inlineHelpText>Expected days of consulting to be performed per month</inlineHelpText>
        <label>Expected days of consulting/month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Approver_Level_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Approver Level 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Approver_Level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Approver Level 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Approver_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Approver Level 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Schedules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCCA_Number__c</fullName>
        <externalId>true</externalId>
        <label>MCCA Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Dollar_Value_of_Schedule__c</fullName>
        <description>The dollar value of this Consulting Schedule is not to exceed this</description>
        <inlineHelpText>The dollar value of this Consulting Schedule is not to exceed this</inlineHelpText>
        <label>Max Dollar Value of Schedule</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the user on whose behalf this Schedule is being filed</description>
        <inlineHelpText>Select the user on whose behalf this Schedule is being filed</inlineHelpText>
        <label>On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Schedules4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Schedule_Start_Date__c</fullName>
        <formula>Previous_Schedule__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is a renewal, select the previous schedule</description>
        <inlineHelpText>If this is a renewal, select the previous schedule</inlineHelpText>
        <label>Previous Schedule</label>
        <referenceTo>CDN_CH_Schedule__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Consultant_Address__c</fullName>
        <label>Vendor Contact Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Consultant_Email__c</fullName>
        <label>Vendor Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Consultant_Name__c</fullName>
        <label>Vendor Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Manager to whom Consultant reports</description>
        <inlineHelpText>Project Manager to whom Consultant reports</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Schedules3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Number__c</fullName>
        <label>SOW Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_HR_Date__c</fullName>
        <label>Sent to HR Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_to_HR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to HR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Infosec_Date__c</fullName>
        <label>Sent to Infosec Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_to_Infosec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Infosec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Vendor_Date__c</fullName>
        <label>Sent to Vendor Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_to_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Schedules5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Consulting Start Date for this Schedule</description>
        <inlineHelpText>Consulting Start Date for this Schedule</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>01 - Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Pending IT Manager Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Approved by IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - Out For GD Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Signed by GD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Pending Vendor Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - Signed By Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - Sent to HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 - Sent to Infosec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - In Effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <description>Company Name</description>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Schedule</label>
    <nameField>
        <displayFormat>SCH-{0000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>End_Date_cannot_be_earlier_than_Start_Da</fullName>
        <active>true</active>
        <description>End Date cannot be earlier than Start Date</description>
        <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
    </validationRules>
</CustomObject>